fixed forbidden use of sun.misc.Base64* classes